#
#
#

[metadata]
name=async_usbtmc
version=0.1.0
description=python-usbtmc with asyncio
license=MIT
license_files=file: LICENSE
author=Enchan1207
include_package_data=True
zip_safe=False

[options]
package_dir=
    =src
packages=find:

install_requires =
    python-usbtmc


[options.packages.find]
where=src