#
#
#

[metadata]
name=tmcsh
version=0.1.0
description="Interactive command shell for USB TMC device"
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_files=file: LICENSE
author=Enchan1207
include_package_data=True
zip_safe=False
url=https://github.com/Enchan1207/tmcsh

[options]
package_dir=
    =src
packages=find:

install_requires =
    python-usbtmc

entry_points=file: entry_points.cfg

[options.packages.find]
where=src
